# Automated-Market-Research-Crew

./: Dockerfile  README.md  app.py  pyproject.toml
src/config/: task.yaml
src/market_resrch_crew/: crew.py  main.py
src/market_resrch_crew/config/: agents.yaml  tasks.yaml
static/: app.js  style.css
templates/: about.html  base.html  contact.html  home.html  methodology.html  privacy.html  research.html  terms.html  use-cases.html
