[project]
name = "market_resrch_crew"
version = "0.1.0"
description = "market-resrch-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]>=1.15.1,<2.0.0",
    "flask>=3.1.3",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/market_resrch_crew"]

[project.scripts]
market_resrch_crew = "market_resrch_crew.main:run"
run_crew = "market_resrch_crew.main:run"
train = "market_resrch_crew.main:train"
replay = "market_resrch_crew.main:replay"
test = "market_resrch_crew.main:test"
